# PointerHook

./: CMakeLists.txt  IPointerHook.cpp  IPointerHook.h  LICENSE  Logger.h  PointerHookManager.h  README.md  SafePointerHook.h  example.cpp  trampoline.s
KittyMemory/: KittyMemory.cpp  KittyUtils.cpp
